Added sound and image support, changed gamefield background and fixed SO-Error in recursive fakedrop algorithm